[package]
name = "lit-html-macro"
version = "0.0.0"
authors = ["Richard Anaya"]
edition = "2018"
description = "A macro for using lit-html"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std"]
repository = "https://github.com/richardanaya/lit-html-rs"
readme="../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies.syn]
version = "1"
features = ["full"]