[package]
name = "lit-html"
version = "0.0.0"
authors = ["Richard <Richard>"]
edition = "2018"
description = "A library for rendering HTML"
categories = ["wasm", "no-std"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js= "0.2"
globals = "1"
