[package]
name = "example"
version = "0.0.0"
authors = ["Richard <Richard>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lit-html = {path="../../lit-html"}

[lib]
crate-type =["cdylib"]

[profile.release]
lto = true
