[package]
name = "example"
version = "0.0.0"
authors = ["Richard <Richard>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lit-html = { path = "../../" }
js = "0"
web = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
globals = "1"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
